--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -245,9 +245,11 @@ OWL 2 QL is based on the DL-Lite family of description logics. Several variants 
 
 \section{Evaluation}
 
-\begin{itemize}
-	\item Evaluation Using Practical Data Set
-\end{itemize}
+We evaluated to which extend the 5 possible standard constraint languages fulfill each requirement to formulate RDF constraints.
+Tilde means that this constraint may be fulfilled by that particular constraint language - either by limitations, workarounds, or extensions.
+We also evaluated if a specific constraint is fulfilled by OWL 2 QL or if the more expressive OWL 2 DL is needed. 
+
+\tb{ToDO: insert evaluation table}
 
 \bibliography{../../literature/literature}{}
 \bibliographystyle{plain}
