language tag operations

--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -2762,8 +2762,6 @@ examples:
 
 \subsection{Simple Example}
 
-
-
 \section{Language Tag Matching}
 
 requirement:
@@ -2772,7 +2770,7 @@ requirement:
 	\item R-47-LANGUAGE-TAG-MATCHING
 \end{itemize}
 
-\section{Cardinality on Literal Language Tags}
+\section{Language Tag Cardinality}
 
 requirements:
 
