--- a/paper/RDF validation requirements/requirements evaluation.tex
+++ b/paper/RDF validation requirements/requirements evaluation.tex
@@ -271,6 +271,7 @@ Property Assertions & \ding{55} & $\checkmark$ & $\sim$ & \ding{55} & \ding{55} 
 Value is Valid for Datatype & \ding{55} & \ding{55} & \ding{55} & \ding{55} & \ding{55} & $\checkmark$ \\
 Data Property Facets & \ding{55} & $\checkmark$ & $\checkmark$ & \ding{55} & \ding{55} & $\checkmark$ \\
 Primary Key Properties & \ding{55} & $\checkmark$ & \ding{55} & \ding{55} & \ding{55} & $\checkmark$ \\
+\textcolor{blue}{*Exploiting Class/Property Specialization Ontology Axioms} & \ding{55} & \ding{55} & \ding{55} & \ding{55} & \ding{55} & $\checkmark$ \\
 \end{evaluation}
 
 % $\checkmark$
