--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -34,6 +34,26 @@
   Timestamp                = {2014.05.01}
 }
 
+@Article{Artale2009,
+  Title                    = {The DL-lite Family and Relations},
+  Author                   = {Artale, Alessandro and Calvanese, Diego and Kontchakov, Roman and Zakharyaschev, Michael},
+  Journal                  = {J. Artif. Int. Res.},
+  Year                     = {2009},
+
+  Month                    = sep,
+  Number                   = {1},
+  Pages                    = {1--69},
+  Volume                   = {36},
+
+  Acmid                    = {1734954},
+  Address                  = {USA},
+  ISSN                     = {1076-9757},
+  Issue_date               = {September 2009},
+  Numpages                 = {69},
+  Publisher                = {AI Access Foundation},
+  Url                      = {http://dl.acm.org/citation.cfm?id=1734953.1734954}
+}
+
 @TechReport{Maler:04:EML,
   Title                    = {OWL 2 Web Ontology Language - Structural Specification and Functional-Style Syntax (Second Edition)},
   Author                   = {Conrad Bock and Achille Fokoue and Peter Haase and Rinke Hoekstra and Ian Horrocks and Alan Ruttenberg and Uli Sattler and Michael Smith},
@@ -262,6 +282,28 @@
 
   Owner                    = {Thomas Bosch},
   Timestamp                = {2014.11.08}
+}
+
+@Article{Calvanese2007,
+  Title                    = {Tractable Reasoning and Efficient Query Answering in Description Logics: The DL-Lite Family},
+  Author                   = {Calvanese, Diego and Giacomo, Giuseppe and Lembo, Domenico and Lenzerini, Maurizio and Rosati, Riccardo},
+  Journal                  = {J. Autom. Reason.},
+  Year                     = {2007},
+
+  Month                    = oct,
+  Number                   = {3},
+  Pages                    = {385--429},
+  Volume                   = {39},
+
+  Acmid                    = {1286097},
+  Address                  = {Secaucus, NJ, USA},
+  Doi                      = {10.1007/s10817-007-9078-x},
+  ISSN                     = {0168-7433},
+  Issue_date               = {October 2007},
+  Keywords                 = {DL-Lite, Description logics, Ontology languages, Query answering},
+  Numpages                 = {45},
+  Publisher                = {Springer-Verlag New York, Inc.},
+  Url                      = {http://dx.doi.org/10.1007/s10817-007-9078-x}
 }
 
 @Article{CoyleBoschEckertBaker2015,
