--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -361,7 +361,7 @@ validation by query answering with OWL 2 DL reasoning & N2EXPTIME \\
 
 \begin{itemize}
 	\item Query answering in OWL 2 QL is in LOGSPACE (or rather in AC$^2$ ), so constraint validation by queries without reasoning should be in the same complexity.
-  \item (TBox) Reasoning in OWL 2 QL is in PTIME, so rewriting of queries to receive “complete“ results is in this complexity.
+  \item (TBox) Reasoning in OWL 2 QL is in PTIME, so rewriting of queries to receive “complete“ results is in this complexity \cite{Artale2009,Calvanese2007}.
   \item The combined complexity is probably still LOGSPACE, but I’m not sure about that.
 	\item Perhaps, I better pronounce it. Roughly, the famous paper by Guiterrez (http://dl.acm.org/citation.cfm?id=1567278) says that evaluating SPARQL queries  are of computational complexity PSPACE-Complete. So now, notice that N2EXPTIME (OWL 2 DL reasoning) refers to (a lot) harder class than PSPACE.
 \end{itemize}
